--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
           </li>
+          <a href="#" id="close"> <i class="fa-solid fa-xmark"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
       </div>
       <!-- Navbar Section End -->
     </section>
@@ -39,7 +44,7 @@
       <h4>Trade-in-offer</h4>
       <h2>Super value deals</h2>
       <h1>On all products</h1>
-      <p>Svae more with coupons & up to 70% off!</p>
+      <p>Save more with coupons & up to 70% off!</p>
       <button>Shop Now</button>
     </section>
     <!-- Hero Section end -->
@@ -431,7 +436,61 @@
     <!-- NewsLetters End -->
 
     <!-- Footer Start -->
-    till 1:37
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="logo" />
+        <h4>Contact</h4>
+        <p>
+          <span>Address:</span> 562 Wellington Road, Street 32, San Francisco
+        </p>
+        <p><span>Phone:</span> +01 2222 365/(+91) 01 235 6789</p>
+        <p><span>Hours:</span> 10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="#"> About us</a>
+        <a href="#"> Delivery Information</a>
+        <a href="#"> Privacy</a>
+        <a href="#"> Terms & Conditions</a>
+        <a href="#"> Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#"> Sign In</a>
+        <a href="#"> View Cart</a>
+        <a href="#"> My Wishlist</a>
+        <a href="#"> Track My Order</a>
+        <a href="#"> Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="" />
+          <img src="img/pay/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="img/pay/pay.png" alt="" />
+      </div>
+
+      <div class="copyright">
+        <p>@2024, Cara</p>
+      </div>
+    </footer>
+
     <!-- Footer End -->
 
     <script src="script.js"></script>
